# Games

./: .gitignore
GhostEscape/: CMakeLists.txt  GhostEscape-Linux
GhostEscape/src/: debug.h  enemy.cpp  enemy.h  game.cpp  game.h  main.cpp  player.cpp  player.h  scene_main.cpp  scene_main.h  scene_title.cpp  scene_title.h  spawner.cpp  spawner.h  weapon_thunder.cpp  weapon_thunder.h
GhostEscape/src/affiliate/: affiliate_bar.cpp  affiliate_bar.h  collider.cpp  collider.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h  text_label.cpp  text_label.h
GhostEscape/src/core/: actor.cpp  actor.h  asset_store.cpp  asset_store.h  defs.h  (+11 more)
Shooter/: CMakeLists.txt  Shooter_Linux  resources.rc
Shooter/.cache/clangd/index/: Game.cpp.AF52F0FF3374E980.idx  Game.h.5D905E0B744DCE82.idx  Scene.cpp.6404CBF27A27693A.idx  Scene.h.F4ED63762AF29F76.idx  SceneEnd.cpp.36CD3C257C33444A.idx  SceneEnd.h.22FE9E150157CE03.idx  SceneMain.cpp.FDFDD08FF6D038D3.idx  SceneMain.h.DDC962A677FBA0B2.idx  SceneTitle.cpp.410F4410211FFDFE.idx  SceneTitle.h.58EBF21E3BD72491.idx  TextRender.cpp.ED9E6863544B7299.idx  TextRender.h.610D55442AA0585B.idx  main.cpp.1B33F92A74889582.idx  main.cpp.F26A9A22863FEF3A.idx  object.cpp.E26917B970143510.idx  object.h.5DF32BCB4A792692.idx  tool.h.2CF4450CE7EDED2D.idx
Shooter/src/: Game.cpp  Game.h  Scene.cpp  Scene.h  SceneEnd.cpp  SceneEnd.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  Scores.txt  TextRender.cpp  TextRender.h  main.cpp  object.cpp  object.h  tool.h
SunnyLand/: .gitignore  CMakeLists.txt  SunnyLand-Linux
SunnyLand/src/: main.cpp
(+61 files in other folders)
